# nndl_cpp

./: .gitignore  CMakeLists.txt  README.md
chapter1/: CMakeLists.txt  main.cpp  neural_network.cpp  neural_network.hpp
chapter2/: CMakeLists.txt  main.cpp  neural_network.cpp  neural_network.hpp
chapter2_fully_matrix/: CMakeLists.txt  neural_network.cpp  neural_network.hpp
chapter3/: CMakeLists.txt  main.cpp  neural_network.cpp  neural_network.hpp
chapter6/: CMakeLists.txt  loss_multiattr.hpp  main.cpp
utils/: CMakeLists.txt  mnist_evaluator.cpp  mnist_evaluator.hpp  mnist_loader.cpp  mnist_loader.hpp  sigmoid.cpp  sigmoid.hpp  types.hpp
